--- a/package.json
+++ b/package.json
@@ -11,9 +11,20 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.3.4",
+    "@codemirror/lang-xml": "^6.1.0",
+    "@codemirror/lang-yaml": "^6.1.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@eslint/js": "^9.33.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
+    "@neondatabase/serverless": "^0.10.4",
+    "@playwright/test": "^1.54.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -42,14 +53,20 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
+    "@testing-library/react": "^16.3.0",
     "@types/eslint__js": "^8.42.3",
     "@types/js-yaml": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "@uiw/react-codemirror": "^4.25.1",
+    "@vitest/ui": "^3.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.39.1",
+    "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
@@ -65,13 +82,19 @@
     "eslint-plugin-unicorn": "^60.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
     "js-yaml": "^4.1.0",
     "jsbarcode": "^3.12.1",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.453.0",
+    "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "playwright": "^1.54.2",
+    "playwright-chromium": "^1.54.2",
     "prettier": "^3.6.2",
     "qrcode-generator": "^2.0.4",
     "react": "^18.3.1",
@@ -86,6 +109,7 @@
     "tw-animate-css": "^1.2.5",
     "typescript-eslint": "^8.39.1",
     "vaul": "^1.1.2",
+    "vitest": "^3.2.4",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
