--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -316,6 +316,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-and-release]
     if: always() && needs.build-and-release.result == 'success'
+    permissions:
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
