--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,31 +26,27 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+
+      - run: make install
+
+      - run: make type-check
+      - run: make test
+      - run: make format-check
+      - run: make lint
+      - run: make build
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: dist/
+          retention-days: 7
       
-      - name: Install dependencies
-        run: make install
-      
-      - name: Run type checking
-        run: make type-check
-      
-      - name: Run unit tests
-        run: make test
-        continue-on-error: false
-      
-      - name: Build application
-        run: make build
-      
-      - name: Install Playwright browsers
-        run: make e2e-install
-      
-      - name: Run E2E tests
-        run: make e2e-test
-        continue-on-error: false
-      
-      - name: Run formatters
-        run: make format
+      - run: make e2e-install
+      - run: make e2e-test
 
         # Running the above should not cause a git diff.
+        # Investigate why this file change occurred and eliminate the cause
       - name: Check for changes
         run: git diff --exit-code
 
@@ -64,11 +60,3 @@ jobs:
             playwright-report/
           retention-days: 7
       
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: |
-            dist/
-            client/dist/
-          retention-days: 7
